--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -93,7 +93,7 @@
             android:text="REPLY"
             android:textColor="@color/blog.comments.follow_reply_btn"
             android:textSize="14sp"
-            android:visibility="invisible" />
+            android:visibility="visible" />
     </RelativeLayout>
 
     <RelativeLayout
