--- a/MyCity4Kids/MyCity4Kids/res/layout/reply_reply_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/reply_reply_cell.xml
@@ -10,6 +10,7 @@
         android:id="@+id/relativeMainContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:paddingBottom="4dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -59,6 +60,20 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/txvCommentDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/txvCommentTitle"
+            android:layout_alignStart="@+id/txvCommentTitle"
+            android:layout_below="@id/network_img"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-thin"
+            android:paddingLeft="8dp"
+            android:singleLine="false"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
+
+        <TextView
             android:id="@+id/txvEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,78 +94,8 @@
             android:padding="5dp"
             android:text="REPLY"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="invisible" />
     </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/replyRelativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/relativeMainContainer"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/comments_reply_bg"
-        android:visibility="gone">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/replyUserImageView"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/default_commentor_img"
-            app:civ_border="true"
-            app:civ_border_color="@color/white_color"
-            app:civ_border_width="0dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="@color/grey"
-            app:civ_shadow_radius="4" />
-
-        <TextView
-            android:id="@+id/replyUserNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/replyUserImageView"
-            android:text="user"
-            android:textColor="@color/black_color"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/replied"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/replyUserNameTextView"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/replyUserNameTextView"
-            android:fontFamily="sans-serif-thin"
-            android:paddingLeft="8dp"
-            android:text="Replied"
-            android:textColor="@color/black_color"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/replyCountTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="sans-serif-thin"
-            android:paddingRight="10dp"
-            android:text="REPLIES"
-            android:textColor="@color/black_color"
-            android:textSize="12sp" />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/dividerLine"
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_below="@+id/replyRelativeLayout"
-        android:layout_marginTop="10dp"
-        android:background="@color/grey_light"
-        android:visibility="visible" />
 
 </RelativeLayout>
