--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_view_pager.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_view_pager.xml
@@ -23,19 +23,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_marginTop="5dp"
             android:padding="10dp"
-            android:src="@drawable/logo_tutorial" />
+            android:src="@drawable/app_logo" />
 
-        <TextView
-            android:id="@+id/txvSkip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:fontFamily="sans-serif-light"
-            android:padding="10dp"
-            android:text="Skip"
-            android:textColor="@color/black_color"
-            android:textSize="19sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/txvSkip"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:fontFamily="sans-serif-light"-->
+            <!--android:padding="10dp"-->
+            <!--android:text="Skip"-->
+            <!--android:textColor="@color/black_color"-->
+            <!--android:textSize="19sp" />-->
     </RelativeLayout>
 
 </RelativeLayout>
