--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -104,7 +104,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/comments_reply_bg"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/replyUserImageView"
@@ -128,7 +128,10 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/replyUserImageView"
-            android:text="user"
+            android:ellipsize="marquee"
+            android:maxLines="1"
+            android:maxWidth="190dp"
+            android:text="user d wad d dijiaw dawj9iad ikad"
             android:textColor="@color/black_color"
             android:textSize="14sp" />
 
@@ -152,6 +155,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:fontFamily="sans-serif-thin"
+            android:paddingLeft="5dp"
             android:paddingRight="10dp"
             android:text="REPLIES"
             android:textColor="@color/black_color"
