--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
@@ -3,22 +3,108 @@
     android:id="@+id/lnrRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red_drawer_selected"
+    android:background="@drawable/onboarding1"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rltBottomView"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp">
 
+        <TextView
+            android:id="@+id/txvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txvDesc"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="Get Your Shots Of Mommy Wisdom"
+            android:textColor="@color/white_color"
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:id="@+id/txvDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/connect_facebook"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="28dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="Blogs, Videos amp Experts"
+            android:textColor="@color/white_color"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/connect_facebook"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txvLogin"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/facebook_rounded_corners_transparent"
+            android:drawableLeft="@drawable/ic_facebook_white_48dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:paddingBottom="6dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="6dp"
+            android:text="Facebook"
+            android:textColor="@color/white_color"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/connect_gplus"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txvLogin"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/facebook_rounded_corners_transparent"
+            android:drawableLeft="@drawable/ic_gplus_white_48dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:paddingBottom="6dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="6dp"
+            android:text="Google +"
+            android:textColor="@color/white_color"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txvLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/indicator_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-light"
+            android:padding="10dp"
+            android:text="@string/login"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white_color"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:id="@+id/indicator_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:orientation="horizontal">
 
@@ -26,45 +112,45 @@
                 android:id="@+id/one"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:tag="1"
                 android:alpha="0.2"
-                android:src="@drawable/white_filled_bg" />
+                android:src="@drawable/white_filled_bg"
+                android:tag="1" />
 
             <ImageView
                 android:id="@+id/two"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_marginLeft="5dp"
-                android:tag="2"
-                android:alpha="0.2"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/white_filled_bg" />
+                android:alpha="0.2"
+                android:src="@drawable/white_filled_bg"
+                android:tag="2" />
 
             <ImageView
                 android:id="@+id/three"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:tag="3"
                 android:alpha="0.2"
-                android:src="@drawable/white_filled_bg" />
+                android:src="@drawable/white_filled_bg"
+                android:tag="3" />
 
-            <ImageView
-                android:id="@+id/four"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="5dp"
-                android:tag="4"
-                android:alpha="0.2"
-                android:layout_marginRight="5dp"
-                android:src="@drawable/white_filled_bg" />
+            <!--<ImageView-->
+            <!--android:id="@+id/four"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:alpha="0.2"-->
+            <!--android:src="@drawable/white_filled_bg"-->
+            <!--android:tag="4" />-->
 
-            <ImageView
-                android:id="@+id/five"
-                android:tag="5"
-                android:alpha="0.2"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:src="@drawable/white_filled_bg" />
+            <!--<ImageView-->
+            <!--android:id="@+id/five"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:alpha="0.2"-->
+            <!--android:src="@drawable/white_filled_bg"-->
+            <!--android:tag="5" />-->
 
             <!--<ImageView
                 android:id="@+id/six"
@@ -76,42 +162,14 @@
                 android:layout_marginRight="5dp"
                 android:src="@drawable/white_filled_bg" />-->
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/txvTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/indicator_layout"
-            android:layout_marginTop="8dp"
-            android:gravity="center_horizontal"
-            android:text="Involve"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/white_color"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/txvDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txvTitle"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="8dp"
-            android:gravity="center_horizontal|top"
-            android:maxLines="3"
-            android:minLines="3"
-            android:text="Involve vdfdfdfgdg"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/white_color" />
-
-
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/img_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/rltBottomView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/tutorial_1" />
+    <!--<ImageView-->
+    <!--android:id="@+id/img_image"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_above="@id/rltBottomView"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginBottom="10dp"-->
+    <!--android:src="@drawable/tutorial_1" />-->
 </RelativeLayout>
