--- a/MyCity4Kids/MyCity4Kids/res/menu/pop_up_menu_published.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/pop_up_menu_published.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/edit"
-        android:title="Edit"
         android:actionMenuTextColor="@color/black_color"
-        />
+        android:title="Edit" />
 
 </menu>
