--- a/MyCity4Kids/MyCity4Kids/res/layout/change_city.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_city.xml
@@ -167,7 +167,8 @@
             android:textSize="18dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary"/>
+            android:buttonTint="@color/primary"
+            android:visibility="invisible"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
