--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/bloggerImageView"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
         android:layout_margin="15dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/family_xxhdpi" />
+        android:src="@drawable/family_xxhdpi"
+        app:civ_border="true"
+        app:civ_border_color="@color/grey"
+        app:civ_border_width="1dp"
+        app:civ_shadow="false" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -164,7 +169,7 @@
             android:paddingTop="10dp"
             android:text="FOLLOW"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:visibility="invisible" />
 
         <TextView
@@ -182,7 +187,7 @@
             android:paddingTop="10dp"
             android:text="FOLLOWING"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:visibility="invisible" />
 
     </RelativeLayout>
@@ -196,6 +201,8 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif-light"
+        android:maxLines="3"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:visibility="gone" />
 
@@ -209,20 +216,21 @@
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:paddingTop="2dp"
+        android:paddingTop="5dp"
         android:text="MORE"
-        android:textColor="@color/red_selected"
+        android:textColor="@color/black"
+        android:textSize="12sp"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/blogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/userBio"
+        android:layout_below="@+id/more_text"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:maxLines="1"
@@ -255,8 +263,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/icon_draft"
-                android:tint="#f1455f" />
+                android:src="@drawable/icon_draft_selected" />
         </LinearLayout>
 
         <View
