--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/bloggerImageView"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
         android:layout_below="@+id/toolbar"
         android:layout_margin="15dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/family_xxhdpi" />
+        android:src="@drawable/family_xxhdpi"
+        app:civ_border="true"
+        app:civ_border_color="@color/grey"
+        app:civ_border_width="1dp"
+        app:civ_shadow="false" />
 
     <RelativeLayout
         android:id="@+id/infoRelativeLL"
@@ -53,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:fontFamily="sans-serif-light"
                     android:gravity="center"
                     android:text="rank"
                     android:textColor="@color/grey_faded"
@@ -79,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:fontFamily="sans-serif-light"
                     android:text="followers"
                     android:textColor="@color/grey_faded"
                     android:textSize="13sp" />
@@ -104,6 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="2dp"
+                    android:fontFamily="sans-serif-light"
                     android:gravity="center"
                     android:text="followings"
                     android:textColor="@color/grey_faded"
@@ -130,40 +138,36 @@
             android:id="@+id/followTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/statsLinearLayout"
-            android:layout_centerInParent="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingRight="3dp"
             android:paddingTop="8dp"
             android:text="FOLLOW"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:visibility="invisible" />
 
         <TextView
             android:id="@+id/unfollowTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/statsLinearLayout"
-            android:layout_centerInParent="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingRight="3dp"
             android:paddingTop="8dp"
             android:text="FOLLOWING"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:visibility="invisible" />
 
     </RelativeLayout>
@@ -177,8 +181,10 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif-light"
+        android:maxLines="3"
+        android:textColor="@color/black"
         android:textSize="15sp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/more_text"
@@ -186,24 +192,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/userBio"
+        android:layout_marginTop="7dp"
         android:gravity="right"
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:paddingTop="2dp"
-        android:text="More"
-        android:textColor="@color/red_selected"
-        android:visibility="invisible" />
+        android:paddingTop="8dp"
+        android:text="MORE"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/blogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/userBio"
+        android:layout_below="@+id/more_text"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="7dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:maxLines="1"
@@ -237,8 +245,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/icon_draft"
-                android:tint="#f1455f" />
+                android:src="@drawable/icon_draft" />
         </LinearLayout>
 
         <View
