--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/left_drawerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,13 +33,17 @@
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/imgProfile"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                android:src="@drawable/family_xxhdpi" />
+                android:src="@drawable/family_xxhdpi"
+                app:civ_border="true"
+                app:civ_border_color="@color/grey"
+                app:civ_border_width="1dp"
+                app:civ_shadow="false" />
 
             <TextView
                 android:id="@+id/txvUserName"
