--- a/MyCity4Kids/MyCity4Kids/res/layout/contributor_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contributor_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
@@ -23,11 +24,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp">
 
-                <ImageView
+                <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/bloggerImageView"
                     android:layout_width="63dp"
                     android:layout_height="63dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    app:civ_border="true"
+                    app:civ_border_color="@color/grey"
+                    app:civ_border_width="1dp"
+                    app:civ_shadow="false" />
 
                 <TextView
                     android:id="@+id/bloggerName"
@@ -71,6 +76,7 @@
                         android:textSize="22sp" />
 
                     <TextView
+                        android:id="@+id/rankText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
@@ -78,8 +84,7 @@
                         android:layout_marginRight="5dp"
                         android:fontFamily="sans-serif-thin"
                         android:text="rank"
-                        android:textSize="10sp"
-                        android:id="@+id/rankText"/>
+                        android:textSize="10sp" />
                 </RelativeLayout>
             </RelativeLayout>
 
@@ -135,14 +140,14 @@
                     android:text="FOLLOW"
                     android:textColor="@color/blog.comments.follow_reply_btn"
                     android:textSize="13sp"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
                 <RelativeLayout
                     android:id="@+id/relativeLoadingView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="10dp"
                     android:visibility="gone">
 
@@ -150,10 +155,10 @@
                         android:id="@+id/imgLoader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/progress_spinner"
-                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
+                        android:layout_alignParentTop="true"
+                        android:src="@drawable/progress_spinner" />
                 </RelativeLayout>
 
             </RelativeLayout>
