--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -97,6 +97,21 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/rdBtnMomspressoVideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
+            android:button="@null"
+            android:clickable="true"
+            android:fontFamily="sans-serif-light"
+            android:paddingBottom="15dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="15dp"
+            android:text="Video"
+            android:textColor="@color/black_color"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/rdBtnUpcoming"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
