--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -107,7 +107,7 @@
             android:paddingBottom="15dp"
             android:paddingLeft="20dp"
             android:paddingTop="15dp"
-            android:text="Video"
+            android:text="Videos"
             android:textColor="@color/black_color"
             android:textSize="16sp" />
 
