--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@null"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:drawableLeft="@drawable/edit_user_icon"
             android:drawablePadding="10dp"
             android:fontFamily="sans-serif-light"
@@ -62,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@null"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:drawableLeft="@drawable/edit_user_icon"
             android:drawablePadding="10dp"
             android:fontFamily="sans-serif-light"
@@ -84,7 +86,7 @@
             android:drawablePadding="10dp"
             android:fontFamily="sans-serif-light"
             android:hint=" Phone Number"
-            android:inputType="number"
+            android:inputType="phone"
             android:maxLength="14"
             android:paddingLeft="5dp"
             android:textColor="@color/black_color"
