--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:id="@+id/one"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/Down"
@@ -22,13 +23,14 @@
             android:id="@+id/textQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
             android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
             android:layout_toStartOf="@+id/imageDown"
             android:layout_toLeftOf="@+id/imageDown"
+            android:layout_toRightOf="@+id/Down"
+            android:layout_toEndOf="@+id/Down"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
